force-app/main/default/objects/Approver__mdt.object
<CustomObject>
    <description>Maps role to queue names in order to find out the next Approver for Approval Processes</description>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Approvers Mapper</label>
</CustomObject>